--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,10 @@
 </head>
 
 <body>
-  <button onclick="login()">
+  <button id="login-button">
     LOGIN
   </button>
-  <script src="app.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 
 </html>
