--- a/public/refugee/refugee-main.html
+++ b/public/refugee/refugee-main.html
@@ -7,14 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Refugee Main Page</title>
     <link rel="shortcut icon" href="#">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 </head>
 
 <body>
-    <button id="test">Show Data for Refugee</button>
     <div class="container">
-        <pre><p id="temp"></p></pre>
+        <h3 class="text-center">Which type of help do you want?</h3>
+        <div class="row pb-2">
+            <button id="refugee-house-help" type="button" class="btn btn-primary">Household</button>
+        </div>
+        <div class="row pb-2">
+            <button id="refugee-legal-help" type="button" class="btn btn-primary">Legal</button>
+        </div>
+        <div class="row pb-2">
+            <button id="refugee-misc-help" type="button" class="btn btn-primary">Miscellaneous</button>
+        </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <script type="module" src="./refugee-main.js"></script>
 </body>
 
