--- a/public/refugee/refugee-main.html
+++ b/public/refugee/refugee-main.html
@@ -9,12 +9,15 @@
     <link rel="shortcut icon" href="#">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
     <div class="container">
         <h3 class="text-center">Which type of help do you want?</h3>
+        <div class="row pb-2">
+            <button id="request-help" type="button" class="btn btn-danger">Request Help</button>
+        </div>
         <div class="row pb-2">
             <button id="refugee-house-help" type="button" class="btn btn-primary">Household</button>
         </div>
