--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Welcome to Firebase Hosting</title>
   <link rel="shortcut icon" href="#">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@400;700&family=Poppins:wght@400;700&display=swap"
+    rel="stylesheet">
+
+  <link rel="stylesheet" href="index.css">
   <!-- update the version number as needed -->
   <script defer src="/__/firebase/9.6.10/firebase-app-compat.js"></script>
   <!-- include only the Firebase features as you need -->
@@ -18,17 +26,58 @@
   <script defer src="/__/firebase/9.6.10/firebase-analytics-compat.js"></script>
   <script defer src="/__/firebase/9.6.10/firebase-remote-config-compat.js"></script>
   <script defer src="/__/firebase/9.6.10/firebase-performance-compat.js"></script>
-  <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
   <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 </head>
 
 <body>
-  <button id="login-button">
-    LOGIN
-  </button>
+  <section class="gradient-background">
+    <h1 class="head-1">Welcome to U-Help!</h1>
+    <div class="head-2"><img src="images/icons8-handshake-48.png"></div>
+    <h4 class="head-3">'Connecting the Victims of War to the Heroes of Peace'</h4>
+    <h6 class="head-4">Times are tough, but we are tougher!</h6>
+    <div class="head-5"><img src="images/ukraine-flag.png"></div>
+    <div class="container py-5">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+          <div class="card shadow-2-strong" style="border-radius: 1rem; border: 2px dotted #3b5998;">
+            <div class="card-body p-5 text-center">
+
+              <h3 class="mb-3" style="color: #3b5998;">Sign in</h3>
+
+              <div class="form-outline mb-3">
+                <input type="email" id="typeEmailX-2" class="form-control form-control-lg" />
+                <label class="form-label" for="typeEmailX-2" style="color: #3b5998;">Email</label>
+              </div>
+
+              <div class="form-outline mb-3">
+                <input type="password" id="typePasswordX-2" class="form-control form-control-lg" />
+                <label class="form-label" for="typePasswordX-2" style="color: #3b5998;">Password</label>
+              </div>
+
+              <!-- Checkbox -->
+              <div class="form-check d-flex justify-content-start mb-4">
+                <input class="form-check-input" type="checkbox" value="" id="form1Example3" />
+                <label class="form-check-label" for="form1Example3" style="color: #3b5998;">&nbsp;Remember Password
+                </label>
+              </div>
+
+              <button class="btn btn-primary btn-lg btn-block" type="submit"
+                style="background-color: #3b5998; border-color: #3b5998;">Login</button>
+
+              <hr class="my-4">
+
+              <button id="google-login-button" class="btn btn-lg btn-block btn-primary"
+                style="background-color: #dd4b39; border-color: #dd4b39;" type="submit"><img
+                  src="images/icons8-google-48.png" style="width: 10%; height: 10%;"> Sign in with Google</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
   <script type="module" src="app.js"></script>
 </body>
 
