Profile section completed

--- a/public/refugee/refugee-main.html
+++ b/public/refugee/refugee-main.html
@@ -16,6 +16,9 @@
     <div class="container">
         <h3 class="text-center">Which type of help do you want?</h3>
         <div class="row pb-2">
+            <button id="fill-profile" type="button" class="btn btn-danger">Profile</button>
+        </div>
+        <div class="row pb-2">
             <button id="request-help" type="button" class="btn btn-danger">Request Help</button>
         </div>
         <div class="row pb-2">
