--- a/public/helper/helper-main.html
+++ b/public/helper/helper-main.html
@@ -49,18 +49,18 @@
     <hr class="my-4">
     <ul class="nav nav-pills mb-3 mt-5" id="pills-tab" role="tablist" style="justify-content: center;">
         <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home"
-                type="button" role="tab" aria-controls="pills-home" aria-selected="true" onclick="displayHelpList()">Urgent Help Requests</button>
+            <button class="nav-link active" id="pills-urgent-tab" data-bs-toggle="pill" data-bs-target="#pills-urgent"
+                type="button" role="tab" aria-controls="pills-urgent" aria-selected="true">Urgent Help Requests</button>
         </li>
         <li class="nav-item" role="presentation">
-            <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile"
-                type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Non-Urgent Help Requests</button>
+            <button class="nav-link" id="pills-non-urgent-tab" data-bs-toggle="pill" data-bs-target="#pills-non-urgent"
+                type="button" role="tab" aria-controls="pills-non-urgent" aria-selected="false">Non-Urgent Help Requests</button>
         </li>
     </ul>
     <div class="tab-content" id="pills-tabContent">
         <div class="tab-pane fade show active" id="pills-urgent" role="tabpanel" aria-labelledby="pills-urgent-tab">
         </div>
-        <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+        <div class="tab-pane fade" id="pills-non-urgent" role="tabpanel" aria-labelledby="pills-non-urgent-tab">
         </div>
     </div>
 
