--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
   <section class="gradient-background">
     <h1 class="head-1">Welcome to U-Help!</h1>
     <div class="head-2"><img src="images/icons8-handshake-48.png"></div>
-    <h4 class="head-3">'Connecting the Victims of War to the Heroes of Peace'</h4>
+    <h4 class="head-3">Connecting the Victims of War to the Heroes of Peace</h4>
     <h6 class="head-4">Times are tough, but we are tougher!</h6>
     <div class="head-5"><img src="images/ukraine-flag.png"></div>
     <div class="container py-5">
