--- a/public/helper/helper-requestcard.html
+++ b/public/helper/helper-requestcard.html
@@ -39,7 +39,7 @@
 
 <body class="gradient-background">
 
-    <div id="help-details" style="height: 100%;">
+    <div id="help-details">
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
