--- a/public/helper/provide-help-form.html
+++ b/public/helper/provide-help-form.html
@@ -1,14 +1,22 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Provide Help Form</title>
     <link rel="shortcut icon" href="#">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anek+Tamil:wght@400;700&family=Poppins:wght@400;700&display=swap"
+        rel="stylesheet">
+
+    <link rel="stylesheet" href="provide-help-form.css">
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/9.6.10/firebase-app-compat.js"></script>
     <!-- include only the Firebase features as you need -->
@@ -26,33 +34,38 @@
       to avoid connecting the SDK to running emulators.
     -->
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
-<body>
 
-<div class="container">
-    <h3>Provide Help Form</h3>
-    <div id="status"></div>
-    <form>
-        <div class="form-group">
-            <label for="exampleFormControlSelect1">Select the type of help you can provide</label>
-            <select class="form-control" id="exampleFormControlSelect1">
-                <option value="housing">Housing</option>
-                <option value="legal">Legal</option>
-                <option value="miscellaneous">Miscellaneous</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="exampleFormControlTextarea1">Describe how you can provide this help</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-        </div>
-        <button id="help-form-submit" class="btn btn-primary">Submit</button>
-    </form>
-</div>
+<body class="gradient-background">
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    <div class="container" style="margin-top: 15%; height: 100vh;">
+        <h5 class="head-1">You are one step closer to positively impacting the lives of hundereds of people!</h5>
+        <div class="head-2"><img src="../images/ukraine-flag.png"></div>
+        <div id="status"></div>
+        <form>
+            <div class="form-group" style="margin-top: 10%;">
+                <label class="label" for="exampleFormControlSelect1">Select the type of help you can provide</label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                    <option value="housing">Housing</option>
+                    <option value="legal">Legal</option>
+                    <option value="miscellaneous">Miscellaneous</option>
+                </select>
+            </div>
+            <div class="form-group" style="margin-top: 5%;">
+                <label class="label" for="exampleFormControlTextarea1">Describe how you can provide this help</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <div style="text-align: center;"><button id="help-form-submit" class="btn btn-primary" style="margin-top: 10%; background-color: #3b5998; border-color: #3b5998;">Submit</button></div>
+        </form>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-<script type="module" src="./provide-help-form.js"></script>
+    <script type="module" src="./provide-help-form.js"></script>
 </body>
+
 </html>
