Beacon Module Added

--- a/public/refugee/refugee-main.html
+++ b/public/refugee/refugee-main.html
@@ -27,6 +27,8 @@
             peaceful world!</h6>
         <div class="head-2"><img src="../images/ukraine-flag.png"></div>
         <div style="text-align: center; margin-top: 2%;">
+            <button id="stress-beacon" class="btn btn-danger">STRESS BEACON</button>
+
             <button id="request-help" class="btn btn-primary" style="background-color: #3b5998; border-color: #3b5998;">I WANT TO POST A HELP</button>
             <button id="fill-profile" class="btn btn-primary" style="background-color: #3b5998; border-color: #3b5998;">MY PROFILE</button>
         </div>
