--- a/public/helper/helper-main.html
+++ b/public/helper/helper-main.html
@@ -27,6 +27,7 @@
     <script defer src="/__/firebase/9.6.10/firebase-analytics-compat.js"></script>
     <script defer src="/__/firebase/9.6.10/firebase-remote-config-compat.js"></script>
     <script defer src="/__/firebase/9.6.10/firebase-performance-compat.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
     <!-- 
       initialize the SDK after all desired features are loaded, set useEmulator to false
       to avoid connecting the SDK to running emulators.
@@ -41,18 +42,20 @@
     <h6 class="head-1">Thank you for choosing to help those who need it the most! You made the right choice!</h6>
     <div class="head-2"><img src="../images/ukraine-flag.png"></div>
     <div style="text-align: center; margin-top: 2%;">
-        <button id="help-form-submit" class="btn btn-primary" style="background-color: #3b5998; border-color: #3b5998;">I WANT TO HELP</button>
-        <button id="fill-profile" class="btn btn-primary" style="background-color: #3b5998; border-color: #3b5998;">MY PROFILE</button>
+        <button id="help-form-submit" class="btn btn-primary"
+            style="background-color: #3b5998; border-color: #3b5998;">I WANT TO HELP</button>
+        <button id="fill-profile" class="btn btn-primary" style="background-color: #3b5998; border-color: #3b5998;">MY
+            PROFILE</button>
     </div>
     <hr class="my-4">
     <ul class="nav nav-pills mb-3 mt-5" id="pills-tab" role="tablist" style="justify-content: center;">
         <li class="nav-item" role="presentation">
             <button class="nav-link active" id="pills-urgent-tab" data-bs-toggle="pill" data-bs-target="#pills-urgent"
-                type="button" role="tab" aria-controls="pills-urgent" aria-selected="true">Urgent Help Requests</button>
+                type="button" role="tab" aria-controls="pills-urgent" aria-selected="true">Help Requests</button>
         </li>
         <li class="nav-item" role="presentation">
             <button class="nav-link" id="pills-non-urgent-tab" data-bs-toggle="pill" data-bs-target="#pills-non-urgent"
-                type="button" role="tab" aria-controls="pills-non-urgent" aria-selected="false">Non-Urgent Help Requests</button>
+                type="button" role="tab" aria-controls="pills-non-urgent" aria-selected="false">Beacons</button>
         </li>
     </ul>
     <div class="tab-content" id="pills-tabContent">
@@ -65,6 +68,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3S4OxnEwJOoZMeA-NbsCaUBI12k2pG-8&v=weekly&channel=2"
+        async></script>
     <script defer type="module" src="./helper-main.js"></script>
 </body>
 
