Bugs Resolved and UI Updated

--- a/public/helper/helper-main.html
+++ b/public/helper/helper-main.html
@@ -39,7 +39,7 @@
 </head>
 
 <body class="gradient-background">
-    <h6 class="head-1">Thank you for choosing to help those who need it the most! You made the right choice!</h6>
+    <h5 class="head-1">Thank you for choosing to help those who need it the most! You made the right choice!</h5>
     <div class="head-2"><img src="../images/ukraine-flag.png"></div>
     <div style="text-align: center; margin-top: 2%;">
         <button id="help-form-submit" class="btn btn-primary"
@@ -55,7 +55,7 @@
         </li>
         <li class="nav-item" role="presentation">
             <button class="nav-link" id="pills-non-urgent-tab" data-bs-toggle="pill" data-bs-target="#pills-non-urgent"
-                type="button" role="tab" aria-controls="pills-non-urgent" aria-selected="false">Beacons</button>
+                type="button" role="tab" aria-controls="pills-non-urgent" aria-selected="false">Emergency Beacons</button>
         </li>
     </ul>
     <div class="tab-content" id="pills-tabContent">
