--- a/public/helper/provide-help-form.html
+++ b/public/helper/provide-help-form.html
@@ -41,7 +41,7 @@
 
 <body class="gradient-background">
 
-    <div class="container" style="margin-top: 15%; height: 100vh;">
+    <div class="container form-class">
         <h5 class="head-1">You are one step closer to positively impacting the lives of hundereds of people!</h5>
         <div class="head-2"><img src="../images/ukraine-flag.png"></div>
         <div id="status"></div>
