--- a/public/refugee/request-help-form.html
+++ b/public/refugee/request-help-form.html
@@ -46,7 +46,7 @@
         <div id="status"></div>
         <form>
             <div class="form-group"  style="margin-top: 5%;">
-                <label class="label" for="exampleFormControlSelect1">Select the type of help needed</label>
+                <label class="label" for="exampleFormControlSelect1">Select the type of help you need</label>
                 <select class="form-control" id="exampleFormControlSelect1">
                     <option value="housing">Housing</option>
                     <option value="legal">Legal</option>
@@ -54,7 +54,7 @@
                 </select>
             </div>
             <div class="form-group"  style="margin-top: 5%;">
-                <label class="label" for="exampleFormControlTextarea1">Please describe the help you need</label>
+                <label class="label" for="exampleFormControlTextarea1">Describe the help you need</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
             <div style="text-align: center;"><button id="help-form-submit" class="btn btn-primary" style="margin-top: 5%; background-color: #3b5998; border-color: #3b5998;">Submit</button></div>
