--- a/public/common/profile.html
+++ b/public/common/profile.html
@@ -45,31 +45,31 @@
         <h3 class="head-1">Profile</h3>
         <div id="status"></div>
         <form>
-            <div class="form-check" style="margin-top: 3%;">
+            <div class="form-check">
                 <input type="checkbox" class="form-check-input" id="custom-is-helper">
                 <label class="form-check-label label" for="custom-is-helper">Check this box if you want to provide help to people in need</label>
             </div>
-            <div class="form-group" style="margin-top: 3%;">
+            <div class="form-group">
                 <label class="label" for="custom-first-name">First Name</label>
                 <input type="text" class="form-control" id="custom-first-name" placeholder="Enter first name">
             </div>
-            <div class="form-group" style="margin-top: 3%;">
+            <div class="form-group">
                 <label class="label" for="custom-last-name">Last Name</label>
                 <input type="text" class="form-control" id="custom-last-name" placeholder="Enter last name">
             </div>
-            <div class="form-group" style="margin-top: 3%;">
+            <div class="form-group">
                 <label class="label" for="custom-mobile">Mobile Number</label>
                 <input type="number" class="form-control" id="custom-mobile" placeholder="Enter mobile">
             </div>
-            <div class="form-group" style="margin-top: 3%;">
+            <div class="form-group">
                 <label class="label" for="custom-image">Image</label>
                 <input type="text" class="form-control" id="custom-image" placeholder="Enter image URL">
             </div>
-            <div class="form-group" style="margin-top: 3%;">
+            <div class="form-group">
                 <label class="label" for="custom-address">Address</label>
                 <input type="text" class="form-control" id="custom-address" placeholder="Enter address">
             </div>
-            <div class="form-group" style="margin-top: 3%;">
+            <div class="form-group">
                 <label class="label" for="custom-story">Tell your story (e.g. How did you end up where you are now? Why do you want to help the people in need?)</label>
                 <textarea class="form-control" id="custom-story" rows="3"></textarea>
             </div>
