--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-  <section class="gradient-background">
+  <section class="gradient-background" style="height: 100vh;">
     <h1 class="head-1">Welcome to U-Help!</h1>
     <div class="head-2"><img src="images/icons8-handshake-48.png"></div>
     <h4 class="head-3">Connecting the Victims of War to the Heroes of Peace</h4>
@@ -42,7 +42,7 @@
           <div class="card shadow-2-strong" style="border-radius: 1rem; border: 2px dotted #3b5998;">
             <div class="card-body p-5 text-center">
 
-              <h3 class="mb-3" style="color: #3b5998;">Sign in</h3>
+              <!-- <h3 class="mb-3" style="color: #3b5998;">Sign in</h3>
 
               <div class="form-outline mb-3">
                 <input type="email" id="typeEmailX-2" class="form-control form-control-lg" />
@@ -54,7 +54,6 @@
                 <label class="form-label" for="typePasswordX-2" style="color: #3b5998;">Password</label>
               </div>
 
-              <!-- Checkbox -->
               <div class="form-check d-flex justify-content-start mb-4">
                 <input class="form-check-input" type="checkbox" value="" id="form1Example3" />
                 <label class="form-check-label" for="form1Example3" style="color: #3b5998;">&nbsp;Remember Password
@@ -64,7 +63,7 @@
               <button class="btn btn-primary btn-lg btn-block" type="submit"
                 style="background-color: #3b5998; border-color: #3b5998;">Login</button>
 
-              <hr class="my-4">
+              <hr class="my-4"> -->
 
               <button id="google-login-button" class="btn btn-lg btn-block btn-primary"
                 style="background-color: #dd4b39; border-color: #dd4b39;" type="submit"><img
