--- a/public/refugee/beacon.html
+++ b/public/refugee/beacon.html
@@ -36,13 +36,10 @@
 
 <body class="gradient-background" style="height: 100vh;">
     <div class="container">
-
-        <div class="d-flex justify-content-center">
-            <h6 style="color: white; font-family: 'Poppins', sans-serif;padding-top: 10px;">Say your task...</h6>
-            <button id="speechToText" class="btn btn-success " title="Speech To Text">Record</button>
-            <input type="text" name="recorded-help" id="recorded-help">
-            <button id="send-text-data" class="btn btn-success">Send Data</button>
-        </div>
+        <h5 style="color: #3b5998; font-weight: bold; margin-top: 10%; text-align: center;">Tap the icon below once to convert your audio to text and send an emergency beacon</h5>
+        <div style="text-align: center; margin-top: 5%;"><button id="speechToText" class="btn btn-danger " title="Speech To Text"><img src="../images/icons8-microphone-50.png"></button></div>
+        <div style="text-align: center; margin-top: 3%;"><input type="textarea" name="recorded-help" id="recorded-help" style="width: 100%; height: 150px;"></div>
+        <div style="text-align: center; margin-top: 3%;"><button id="send-text-data" class="btn btn-success">Send Data</button></div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
