--- a/public/refugee/refugee-main.html
+++ b/public/refugee/refugee-main.html
@@ -23,14 +23,12 @@
 
 <body class="gradient-background" style="height: 100vh;">
     <div class="container">
-        <h6 class="head-1">It has been tough for you, but we are here to help you transition smoothly into your new
-            peaceful world!</h6>
+        <h5 class="head-1">It has been tough for you, but we are here to help you transition smoothly into your new peaceful world!</h5>
         <div class="head-2"><img src="../images/ukraine-flag.png"></div>
-        <div style="text-align: center; margin-top: 2%;">
-            <button id="stress-beacon" class="btn btn-danger">STRESS BEACON</button>
-
-            <button id="request-help" class="btn btn-primary" style="background-color: #3b5998; border-color: #3b5998;">I WANT TO POST A HELP</button>
-            <button id="fill-profile" class="btn btn-primary" style="background-color: #3b5998; border-color: #3b5998;">MY PROFILE</button>
+        <div class="row" style="text-align: center; margin-top: 2%;">
+            <div class="col-md-4 col-12"><button id="stress-beacon" class="btn btn-danger" style="width: 100%;margin-top: 1%;">STRESS BEACON</button></div>
+            <div class="col-md-4 col-12"><button id="request-help" class="btn btn-primary" style="background-color: #3b5998; border-color: #3b5998; width: 100%; margin-top: 1%;">I WANT TO POST A HELP</button></div>
+            <div class="col-md-4 col-12"><button id="fill-profile" class="btn btn-primary" style="background-color: #3b5998; border-color: #3b5998; width: 100%; margin-top: 1%;">MY PROFILE</button></div>
         </div>
         <hr class="my-4">
         <h4 class="head-1">How can we help you?</h4>
